fix add to cart not updating sidebar cart

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -110,6 +110,6 @@
   <script src="{{ 'jquery-1.11.0.min.js' | asset_url }}" defer></script>
   <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
   <script src="{{ 'theme.js' | asset_url }}" defer></script>
-  <script src="{{ 'cart.js' | asset_url }}" defer></script>
+  <script src="{{ 'sidebar-cart.js' | asset_url }}" defer></script>
 </body>
 </html>
