--- a/assets/sidebar-cart.scss
+++ b/assets/sidebar-cart.scss
@@ -5,13 +5,14 @@ $color_primary: #008355;
 }
 
 .cart-summary {
-  width: 340px;
+  width: 20%;
   background: #ffffff;
   position: fixed;
   top: 0;
   left: 100%;
   height: 100%;
-  max-width: calc(100% - 70px);
+  // max-width: calc(100% - 70px);
+  max-width: 320px;
   z-index: 6;
   transition: transform 600ms ease-in-out;
 }
@@ -671,7 +672,7 @@ $color_primary: #008355;
 
   body:not(.template-cart):not(.template-dir-customers) #page-wrap {
     position: relative;
-    margin-right: calc(340px - 5px);
+    margin-right: calc(20% - 5px);
     width: auto;
     overflow: visible;
   }
@@ -682,7 +683,7 @@ $color_primary: #008355;
   //   left: calc(100% - 1px - 5px);
   //   top: 0;
   //   height: 100%;
-  //   width: 340px;
+  //   width: 20%;
   //   border-top: 5px solid $color_primary;
   //   border-bottom: 5px solid $color_primary;
   //   pointer-events: none;
@@ -693,7 +694,7 @@ $color_primary: #008355;
   //   left: 100%;
   //   top: 0;
   //   height: 100%;
-  //   width: 340px;
+  //   width: 20%;
   //   background: #ffffff;
   // }
   body:not(.template-cart):not(.template-dir-customers) .toolbar-cart {
@@ -714,7 +715,7 @@ $color_primary: #008355;
     display: none;
   }
   body:not(.template-cart):not(.template-dir-customers) .cart-summary .cart-promo {
-    width: calc(340px - 30px * 2 - 5px);
+    width: calc(20% - 30px * 2 - 5px);
   }
   // body:not(.template-cart):not(.template-dir-customers) .cart-summary::before {
   //   content: '';
@@ -742,5 +743,11 @@ $color_primary: #008355;
   }
   body:not(.template-cart):not(.template-dir-customers).show-cart-summary .cart-summary {
     transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@media (min-width: 1920px) {
+  body:not(.template-cart):not(.template-dir-customers) #page-wrap {
+    margin-right: auto;
   }
 }
