--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1516,7 +1516,10 @@ html {
 
 .site-wrapper--head {
   @media (min-width: 1100px) {
-    margin-right: calc(340px - 5px);
+    margin-right: calc(20% - 5px);
+  }
+  @media (min-width: 1920px) {
+    margin-right: auto;
   }
 }
 
