update log in styles

--- a/assets/sign-in-up.scss
+++ b/assets/sign-in-up.scss
@@ -9,3 +9,14 @@
     margin-left: 25px;
   }
 }
+
+.sign-in-title {
+  border-bottom: 1px solid #B7B7B7;
+  color: #C4C4C4;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 18px;
+  margin-bottom: 67px;
+  margin-top: 0;
+  padding-bottom: 6px;
+}
