account details, order details and addresses

--- a/assets/sidebar-cart.scss
+++ b/assets/sidebar-cart.scss
@@ -656,6 +656,10 @@ $color_primary: #54a45b;
   display: none;
 }
 
+.site-nav--active a {
+  color: $color_primary;
+}
+
 @media (max-width: 360px) {
   .cart-summary__section,
   .cart-summary__close,
