--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,18 +34,24 @@
     }
   </script>
   <link rel="stylesheet" href="{{ 'theme.scss.css' | asset_url }}">
+  {%- if template.name == 'account' or template.name == 'order' or template.name == 'addresses' -%}
+    <link rel="stylesheet" href="{{'account.scss.css' | asset_url}}">
+  {%- endif -%}
   <link rel="preload" as="style" href="{{ 'site-footer.scss.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
   {%- unless request.page_type == 'cart' -%}
     <link rel="preload" as="style" href="{{ 'sidebar-cart.scss.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
   {%- endunless -%}
-  {%- if template.name == 'login' or template.name == 'register' -%}
+  {%- if template.name == 'login' or template.name == 'register' or template.name == 'addresses' -%}
     <link rel="stylesheet" href="{{ 'forms.scss.css' | asset_url }}">
+  {%- endif -%}
+  {%- if template.name == 'login' or template.name == 'register' -%}
     <link rel="preload" as="style" href="{{ 'sign-in-up.scss.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
   {%- endif -%}
 </head>
 {%- assign show_breadcrumb = true -%}
 {%- assign show_hr = true -%}
 {%- assign show_sidebar = true -%}
+{%- assign show_account_sidebar = false -%}
 {%- if settings.show_breadcrumb_nav -%}
   {%- if template.name == 'login' -%}
     {%- assign show_breadcrumb = false -%}
@@ -57,6 +63,10 @@
     {%- assign show_sidebar = false -%}
   {%- elsif request.page_type == 'index' -%}
     {%- assign show_breadcrumb = false -%}
+  {%- elsif template.name == 'account' or template.name == 'order' or template.name == 'addresses' -%}
+    {%- assign show_hr = false -%}
+    {%- assign show_account_sidebar = true -%}
+    {%- assign show_sidebar = false -%}
   {%- endif -%}
 {%- endif -%}
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ request.page_type | handle }}">
@@ -68,11 +78,16 @@
     {% endcomment %}
   {% section "header" %}
   <div id="page-wrap" class="site-wrapper">
+    {%- if show_account_sidebar == true -%}
+      <p class="account-pages-title">{{ 'customer.login.page_title' | t }}</p>
+    {%- endif -%}
     <div class="grid">
-      {%- if show_sidebar -%}
+      {%- if show_sidebar == true -%}
         {% section "sidebar" %}
+      {%- elsif show_account_sidebar == true -%}
+        {% section 'account-sidebar' %}
       {%- endif -%}
-      <main class="main-content grid__item{% if show_sidebar %} medium-up--four-fifths{% endif %}" id="MainContent" role="main">
+      <main class="main-content grid__item{% if show_sidebar == true or show_account_sidebar == true %} medium-up--four-fifths{% endif %}" id="MainContent" role="main">
         {%- if show_hr == true -%}
           <hr class="hr--border-top small--hide">
           {%- endif -%}
