--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,14 +1,14 @@
 <!-- /templates/customers/account.liquid -->
-<h1 class="small--text-center">{{ 'customer.account.title' | t }}</h1>
+<h1 class="small--text-center account-title">{{ 'customer.account.title' | t }}</h1>
 
 <hr class="hr--clear hr--small">
 
-<h2 class="small--text-center">{{ 'customer.orders.title' | t }}</h2>
+<h2 class="small--text-center account-subtitle">{{ 'customer.orders.title' | t }}</h2>
 
 {% paginate customer.orders by 20 %}
   {% if customer.orders.size != 0 %}
 
-    <table class="responsive-table">
+    <table class="responsive-table data-table">
       <thead>
         <tr>
           <th>{{ 'customer.orders.order_number' | t }}</th>
@@ -26,6 +26,10 @@
             <td data-label="{{ 'customer.orders.payment_status' | t }}">{{ order.financial_status_label }}</td>
             <td data-label="{{ 'customer.orders.fulfillment_status' | t }}">{{ order.fulfillment_status_label }}</td>
             <td data-label="{{ 'customer.orders.total' | t }}">{{ order.total_price | money }}</td>
+          </tr>
+        {% else %}
+          <tr>
+            <td colspan="5">{{ 'customer.orders.none' | t }}</td>
           </tr>
         {% endfor %}
       </tbody>
@@ -45,8 +49,17 @@
 
 <hr class="hr--clear hr--small">
 
-<h2>{{ 'customer.account.details' | t }}</h2>
+<h2 class="account-subtitle">{{ 'customer.account.details' | t }}</h2>
 
-{{ customer.default_address | format_address }}
+<div class="grid">
+  <div class="grid__item medium-up--one-third">
+    {%- if customer.default_address != blank -%}
+      <address class="address-box">
+        <p class="address-box__title">{{ 'customer.addresses.default' | t }}</p>
+        {{ customer.default_address | format_address }}
+      </address>
+    {%- endif -%}
+  </div>
+</div>
 
-<p><a href="{{ routes.account_addresses_url }}">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></p>
+<p class="manage-address-link"><a href="{{ routes.account_addresses_url }}">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></p>
