--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -1,5 +1,5 @@
 <!-- /templates/customers/order.liquid -->
-<h1>{{ 'customer.account.title' | t }}</h1>
+<h1 class="account-title">{{ 'customer.account.title' | t }}</h1>
 <p><a href="{{ routes.account_url }}">{{ 'customer.account.return' | t }}</a></p>
 
 <h2>{{ 'customer.order.title' | t: name: order.name }}</h2>
@@ -14,7 +14,7 @@
   </div>
 {%- endif -%}
 
-<table class="order-table">
+<table class="order-table data-table">
   <thead>
     <tr>
       <th scope="col">{{ 'customer.order.product' | t }}</th>
@@ -134,14 +134,19 @@
 
 <hr class="hr--clear hr--small">
 
-<h3>{{ 'customer.order.billing_address' | t }}</h3>
-
-<p><strong>{{ 'customer.order.payment_status' | t }}:</strong> {{ order.financial_status_label }}</p>
-
-{{ order.billing_address | format_address }}
-
-<h3>{{ 'customer.order.shipping_address' | t }}</h3>
-
-<p><strong>{{ 'customer.order.fulfillment_status' | t }}:</strong> {{ order.fulfillment_status_label }}</p>
-
-{{ order.shipping_address | format_address }}
+<div class="grid">
+  <div class="grid__item medium-up--one-third">
+    <p><strong>{{ 'customer.order.payment_status' | t }}:</strong> {{ order.financial_status_label }}</p>
+    <address class="address-box">
+      <h3 class="address-box__title">{{ 'customer.order.billing_address' | t }}</h3>
+      {{ order.billing_address | format_address }}
+    </address>
+  </div>
+  <div class="grid__item medium-up--one-third">
+    <p><strong>{{ 'customer.order.fulfillment_status' | t }}:</strong> {{ order.fulfillment_status_label }}</p>
+    <address class="address-box">
+      <h3 class="address-box__title">{{ 'customer.order.shipping_address' | t }}</h3>
+      {{ order.shipping_address | format_address }}
+    </address>
+  </div>
+</div>
