--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,19 +1,21 @@
 <!-- /templates/customers/reset_password.liquid -->
-<div class="form-reset-password form-vertical">
-  {% form 'reset_customer_password' %}
+<div class="grid form-reset-password">
+  <div class="grid__item medium-up--one-half">
+    {% form 'reset_customer_password', class: 'form' %}
 
-    <h1>{{ 'customer.reset_password.title' | t }}</h1>
+      <h1 class="form__title">{{ 'customer.reset_password.title' | t }}</h1>
 
-    <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
+      <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
 
-    {{ form.errors | default_errors }}
+      {{ form.errors | default_errors }}
 
-    <label for="ResetPassword" class="label--hidden">{{ 'customer.reset_password.password' | t }}</label>
-    <input type="password" value="" name="customer[password]" id="ResetPassword" class="{% if form.errors contains 'password' %} input--error{% endif %}" placeholder="{{ 'customer.reset_password.password' | t }}">
+      <label for="ResetPassword" class="form__label">{{ 'customer.reset_password.password' | t }}</label>
+      <input type="password" value="" name="customer[password]" id="ResetPassword" class="form__input full-width{% if form.errors contains 'password' %} input--error{% endif %}" placeholder="{{ 'customer.reset_password.password' | t }}">
 
-    <label for="PasswordConfirmation" class="label--hidden">{{ 'customer.reset_password.password_confirm' | t }}</label>
-    <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="{% if form.errors contains 'password_confirmation' %} input--error{% endif %}" placeholder="{{ 'customer.reset_password.password_confirm' | t }}">
+      <label for="PasswordConfirmation" class="form__label">{{ 'customer.reset_password.password_confirm' | t }}</label>
+      <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="form__input full-width{% if form.errors contains 'password_confirmation' %} input--error{% endif %}" placeholder="{{ 'customer.reset_password.password_confirm' | t }}">
 
-    <input type="submit" class="btn" value="{{ 'customer.reset_password.submit' | t }}">
-  {% endform %}
+      <input type="submit" class="btn full-width" value="{{ 'customer.reset_password.submit' | t }}">
+    {% endform %}
+  </div>
 </div>
