--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,65 +1,94 @@
 <!-- /templates/customers/account.liquid -->
-<h1 class="small--text-center account-title">{{ 'customer.account.title' | t }}</h1>
+<div class="text-center js-loading-image">
+  <img src="{{ 'loading.gif' | asset_url }}" alt="loading">
+</div>
+<div class="js-account-content hide">
+  <h1 class="small--text-center account-title">{{ 'customer.account.title' | t }}</h1>
+  <hr class="hr--clear hr--small">
+  <h2 class="small--text-center account-subtitle">{{ 'customer.orders.title' | t }}</h2>
 
-<hr class="hr--clear hr--small">
+  {% paginate customer.orders by 20 %}
+    {% if customer.orders.size != 0 %}
 
-<h2 class="small--text-center account-subtitle">{{ 'customer.orders.title' | t }}</h2>
-
-{% paginate customer.orders by 20 %}
-  {% if customer.orders.size != 0 %}
-
-    <table class="responsive-table data-table">
-      <thead>
-        <tr>
-          <th>{{ 'customer.orders.order_number' | t }}</th>
-          <th>{{ 'customer.orders.date' | t }}</th>
-          <th>{{ 'customer.orders.payment_status' | t }}</th>
-          <th>{{ 'customer.orders.fulfillment_status' | t }}</th>
-          <th>{{ 'customer.orders.total' | t }}</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for order in customer.orders %}
+      <table class="responsive-table data-table">
+        <thead>
           <tr>
-            <td data-label="{{ 'customer.orders.order_number' | t }}">{{ order.name | link_to: order.customer_url }}</td>
-            <td data-label="{{ 'customer.orders.date' | t }}">{{ order.created_at | date: format: 'date' }}</td>
-            <td data-label="{{ 'customer.orders.payment_status' | t }}">{{ order.financial_status_label }}</td>
-            <td data-label="{{ 'customer.orders.fulfillment_status' | t }}">{{ order.fulfillment_status_label }}</td>
-            <td data-label="{{ 'customer.orders.total' | t }}">{{ order.total_price | money }}</td>
+            <th>{{ 'customer.orders.order_number' | t }}</th>
+            <th>{{ 'customer.orders.date' | t }}</th>
+            <th>{{ 'customer.orders.payment_status' | t }}</th>
+            <th>{{ 'customer.orders.fulfillment_status' | t }}</th>
+            <th>{{ 'customer.orders.total' | t }}</th>
           </tr>
-        {% else %}
-          <tr>
-            <td colspan="5">{{ 'customer.orders.none' | t }}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          {% for order in customer.orders %}
+            <tr>
+              <td data-label="{{ 'customer.orders.order_number' | t }}">{{ order.name | link_to: order.customer_url }}</td>
+              <td data-label="{{ 'customer.orders.date' | t }}">{{ order.created_at | date: format: 'date' }}</td>
+              <td data-label="{{ 'customer.orders.payment_status' | t }}">{{ order.financial_status_label }}</td>
+              <td data-label="{{ 'customer.orders.fulfillment_status' | t }}">{{ order.fulfillment_status_label }}</td>
+              <td data-label="{{ 'customer.orders.total' | t }}">{{ order.total_price | money }}</td>
+            </tr>
+          {% else %}
+            <tr>
+              <td colspan="5">{{ 'customer.orders.none' | t }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
 
-  {% else %}
+    {% else %}
 
-    <p>{{ 'customer.orders.none' | t }}</p>
+      <p>{{ 'customer.orders.none' | t }}</p>
 
-  {% endif %}
-  {% if paginate.pages > 1 %}
-    <div class="pagination">
-      {{ paginate | default_pagination | replace: '&laquo; Previous', '&larr;' | replace: 'Next &raquo;', '&rarr;' }}
+    {% endif %}
+    {% if paginate.pages > 1 %}
+      <div class="pagination">
+        {{ paginate | default_pagination | replace: '&laquo; Previous', '&larr;' | replace: 'Next &raquo;', '&rarr;' }}
+      </div>
+    {% endif %}
+  {% endpaginate %}
+
+  <hr class="hr--clear hr--small">
+
+  <h2 class="account-subtitle">{{ 'customer.account.details' | t }}</h2>
+
+  <div class="grid">
+    <div class="grid__item medium-up--one-third">
+      {%- if customer.default_address != blank -%}
+        <address class="address-box">
+          <p class="address-box__title">{{ 'customer.addresses.default' | t }}</p>
+          {{ customer.default_address | format_address }}
+        </address>
+      {%- endif -%}
     </div>
-  {% endif %}
-{% endpaginate %}
-
-<hr class="hr--clear hr--small">
-
-<h2 class="account-subtitle">{{ 'customer.account.details' | t }}</h2>
-
-<div class="grid">
-  <div class="grid__item medium-up--one-third">
-    {%- if customer.default_address != blank -%}
-      <address class="address-box">
-        <p class="address-box__title">{{ 'customer.addresses.default' | t }}</p>
-        {{ customer.default_address | format_address }}
-      </address>
-    {%- endif -%}
   </div>
+
+  <p class="manage-address-link"><a href="{{ routes.account_addresses_url }}">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></p>
 </div>
 
-<p class="manage-address-link"><a href="{{ routes.account_addresses_url }}">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></p>
+<div class="grid form-reset-password js-reset-password-div hide">
+  <div class="grid__item medium-up--one-half">
+    {% form 'recover_customer_password', class: 'form form--sign-in-up form--featured' %}
+      <h2 class="form__title text-center">{{ 'customer.recover_password.title' | t }}</h2>
+      <p class="text-center">{{ 'customer.recover_password.subtext' | t }}</p>
+      {{ form.errors | default_errors }}
+
+      {% comment %}
+        Add a hidden span to indicate the form was submitted succesfully.
+      {% endcomment %}
+      {% if form.posted_successfully? %}
+        <span class="hide reset-password-success"></span>
+      {% endif %}
+
+      <label for="RecoverEmail" class="form__label">{{ 'customer.recover_password.email' | t }}</label>
+      <input type="email" value="{{customer.email}}" name="email" id="RecoverEmail" class="form__input full-width" autocorrect="off" autocapitalize="off">
+
+      <p>
+        <input type="submit" class="btn full-width" value="{{ 'customer.recover_password.submit' | t }}">
+      </p>
+
+      <button type="button" id="HideRecoverPasswordLink" class="btn--link">{{ 'customer.recover_password.cancel' | t }}</button>
+    {% endform %}
+  </div>
+</div>
